# raytracer

./: .gitignore  CMakeLists.txt
cmake/: test.cmake
include/raytracer/: camera.h  color.h  hittable.h  hittable_list.h  material.h  ray.h  sphere.h  util.h  vec3.h
include/raytracer/test/: util.h
src/: color.cc  main.cc  material.cc  sphere.cc  vec3.cc
src/test/: util.cc
test/: test-color.cc  test-hittable.cc  test-ray.cc  test-sphere.cc  test-vec3.cc
